garage-s3/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garage
  namespace: garage
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  serviceName: garage
  replicas: 1
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      containers:
        - name: garage
          image: dxflrs/garage:v2.2.0
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3901
              name: rpc
            - containerPort: 3902
              name: web
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: garage-data
              mountPath: /var/lib/garage
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: garage-config
  volumeClaimTemplates:
    - metadata:
        name: garage-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
