garage-s3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ingress
  namespace: garage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - garage.pointblank.club
      secretName: garage-secret-tls
  rules:
    - host: garage.pointblank.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3900
